[gd_scene load_steps=4 format=3 uid="uid://yvhb0hjfm28w"]

[ext_resource type="Script" path="res://game/src/Player/Ground/bullet/ItemDataHandlerHUD.gd" id="1_g7ha8"]
[ext_resource type="Texture2D" uid="uid://bwqp5sirhkkg6" path="res://game/assets/environment/UI-Assets/Inventory.png" id="1_hcx7p"]
[ext_resource type="FontFile" uid="uid://c4kjrkufs7li7" path="res://game/assets/environment/UI-Assets/Planes_ValMore.ttf" id="2_qvc6h"]

[node name="Information" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 606.0
script = ExtResource("1_g7ha8")

[node name="InfoTab" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 294.0
offset_bottom = 608.0
texture = ExtResource("1_hcx7p")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="ItemName" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 94.0
offset_top = 25.0
offset_right = 331.0
offset_bottom = 79.0
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_fonts/normal_font = ExtResource("2_qvc6h")
theme_override_font_sizes/normal_font_size = 35
text = "Rotion"

[node name="ItemCost" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 40.0
offset_top = 126.0
offset_right = 277.0
offset_bottom = 180.0
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_fonts/normal_font = ExtResource("2_qvc6h")
theme_override_font_sizes/normal_font_size = 35
text = "Cost : "

[node name="ItemEngery" type="RichTextLabel" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 37.0
offset_top = 195.0
offset_right = 274.0
offset_bottom = 249.0
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_fonts/normal_font = ExtResource("2_qvc6h")
theme_override_font_sizes/normal_font_size = 35
text = "Energy : "

[node name="ItemIcon" type="Sprite2D" parent="."]
position = Vector2(133, 431)
